--- a/assets_src/dynamic/css/ui.css
+++ b/assets_src/dynamic/css/ui.css
@@ -3,21 +3,34 @@
   margin-top: 45px;
   height: 100%;
   overflow: auto;
-  font-size: 1.3em;
 }
 
 #preview {
-  height: calc(100% - 40px);
-  width: calc(50% - 40px);
+  height: calc(100% - 60px);
+  width: calc(50% - 60px);
   float: left;
   overflow-y: scroll;
-  padding: 20px;
+  padding: 30px;
 }
 
 #editor div.CodeMirror {
   height: 100%;
   width: 50%;
   float: left;
+  font-size: 1.3em;
+}
+#editor div.CodeMirror .CodeMirror-line {
+  padding-left: 30px;
+  padding-right: 30px;
+  color: #2c3e50;
+}
+
+#editor div.CodeMirror .CodeMirror-lines {
+  padding: 30px 0;
+}
+
+#editor .CodeMirror-overlayscroll-horizontal div, .CodeMirror-overlayscroll-vertical div {
+  background: #6C6E71;
 }
 
 #edit {
