--- a/assets_src/static/css/style.css
+++ b/assets_src/static/css/style.css
@@ -8,12 +8,12 @@ body {
   padding: 0px;
   max-width: 100%;
   line-height: 1.6;
-  color: #2c3e50;
+  color: #333;
   font-family: medium-content-sans-serif-font, "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 #content.markdown-body, #preview.markdown-body {
-  color: #2c3e50;
+  color: #333;
   font-size: 1.25em;
   font-family: medium-content-sans-serif-font, "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
