--- a/assets_src/static/css/style.css
+++ b/assets_src/static/css/style.css
@@ -8,13 +8,33 @@ body {
   padding: 0px;
   max-width: 100%;
   line-height: 1.6;
-  color: #333;
-  font-family: medium-content-sans-serif-font, "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #252525; /* Color from wikipedia, instead of #333 */
+  font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 #content {
-  margin: 30px;
+  margin: 0 16px;
   margin-top: 57px;
+  margin-bottom: 30px;
+}
+
+@media (min-width: 720px) {
+  #content {
+    max-width: 900px;
+    margin: 0 3.35em;
+    margin-top: 57px;
+    margin-bottom: 30px;
+  }
+}
+
+@media (min-width: 62.5em) {
+  #content {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 900px;
+    margin-top: 57px;
+    margin-bottom: 30px;
+  }
 }
 
 #controles {
