--- a/assets_src/nouwiki/css/ui.css
+++ b/assets_src/nouwiki/css/ui.css
@@ -56,16 +56,27 @@
   right: 0;
   list-style-type: none;
   padding-left: 0;
-  width: 206px;
+  margin-top: 0;
+  width: 252px;
   z-index: 1;
 }
 
 #right_controles ul#matches li {
   background-color: #FFF;
-  padding-left: 10px;
+  padding-left: 0;
+}
+#right_controles ul#matches li:hover {
+  background-color: #528bff;
 }
 
 #right_controles ul#matches li a {
   text-decoration: none;
-  color: #333;
+  color: #252525;
+  display: block;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+#right_controles ul#matches li:hover a {
+  color: #fff;
 }
