--- a/assets_src/nouwiki/css/ui.css
+++ b/assets_src/nouwiki/css/ui.css
@@ -22,7 +22,7 @@
 #editor div.CodeMirror .CodeMirror-line {
   padding-left: 30px;
   padding-right: 30px;
-  color: #2c3e50;
+  /*color: #2c3e50;*/
 }
 
 #editor div.CodeMirror .CodeMirror-lines {
