--- a/assets_src/static/css/style.css
+++ b/assets_src/static/css/style.css
@@ -9,7 +9,11 @@ body {
   max-width: 100%;
   line-height: 1.6;
   color: #252525; /* Color from wikipedia, instead of #333 */
-  font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", Symbola;
+}
+
+.border-box, article, body, code, dd, div, dl, dt, fieldset, footer, form, header, html, input[type="email"], input[type="number"], input[type="password"], input[type="tel"], input[type="text"], input[type="url"], li, main, ol, p, pre, section, textarea, ul {
+  box-sizing: border-box;
 }
 
 #content {
@@ -43,34 +47,31 @@ body {
   position: fixed;
   left: 0;
   top: 0;
-  border-bottom: 0px solid #333;
-  background-color: #fff;
+  border-bottom: 0px solid #252525;
   width: 100%;
+  background-color: #fff;
 }
-
-#controles a button {
-  color: #333;
-}
-
-/*#controles.disabled button {
-  opacity: 0.7;
-  color: #999;
-}
-
-#controles.disabled button#home {
-  opacity: 1.0;
-  color: #333;
-}*/
 
 #controles button {
   float: left;
-  background-color: #FCFCFC;
+  background-color: transparent;
   border: 0px;
   border-right: 2px solid #FFF;
   padding: 10px;
+
+  color: #777;
+}
+#controles button:hover {
+  color: #252525;
 }
 
 #controles button:disabled {
-  opacity: 0.7;
-  color: #999;
+  color: #D7D7D7;
+}
+
+#controles button, #controles input {
+  transition-property: color, fill;
+  transition-duration: 0.1s, 0.1s;
+  transition-timing-function: ease, ease;
+  transition-delay: 0s, 0s;
 }
